cfdsa-master/bgg/database/bgg-app-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bgg-app-deployment-v2
  namespace: workshop02-bgg-db-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: bgg-app-pod
      app.kubernetes.io/version: "v2"
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  # The following can be defined in another fill
  # Deployment will match by the labels define in the Pod yaml config
  template:
    metadata:
      name: bgg-app-pod
      # kubernetes works with label, anything with the label will receieve the request
      labels:
        app.kubernetes.io/name: bgg-app-pod
        app.kubernetes.io/version: "v2"
        owner: yaofeng
    spec:
      containers:
      - name: bgg-app-pod
        # image: stackupiss/bgg-app:v1
        image: stackupiss/bgg-app:v2
        imagePullPolicy: Always
        ports:
          - name: bgg-app-pod
            containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: bgg-app-svc-v2
  namespace: workshop02-bgg-db-ns
  labels:
    name: bgg-app-svc-v2
spec:
  type: ClusterIP
  selector:
      app.kubernetes.io/name: bgg-app-pod
      app.kubernetes.io/version: "v2"
  ports:
    # port is the service port
    - name: bgg-app-svc-port
      port: 8080
    # targetPort is the internal container port
    # can be either port number or the port name declar in pod
      targetPort: bgg-app-pod
