cfdsa-master/bgg/database/ingress-host.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bggapping-host
  namespace: workshop02-bgg-db-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: app1.139.59.222.191.nip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: bgg-app-svc-v1
              servicePort: 80
    - host: app2.139.59.222.191.nip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: bgg-app-svc-v2
              servicePort: 8080
